--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,10 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>cpe305</groupId>
   <artifactId>VirtualAssitant</artifactId>
   <version>1</version>
-</project>
+
 <profiles>
     <profile>
         <id>sonar</id>
@@ -29,3 +30,4 @@
         </plugins>
     </pluginManagement>
 </build>
+</project>
